--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,6 +19,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+          
+      - name: Set up chart-testing
+        uses: helm/chart-testing-action@v2.4.0      
+      
       - name: Run chart-testing (lint)
         run: ct lint --config ct.yaml
 
