--- a/charts/hertzbeat/values.yaml
+++ b/charts/hertzbeat/values.yaml
@@ -6,7 +6,13 @@ manager:
     pullPolicy: IfNotPresent
     # Overrides the image tag whose default is the chart appVersion.
     tag: ""
-  
+  account:
+    username: "admin"
+    password: "hertzbeat"
+  jwtSecretKey: "CyaFv0bwq2Eik0jdrKUtsA6bx3sDJeFV143R
+                 LnfKefTjsIfJLBa2YkhEqEGtcHDTNe4CU6+9
+                 8tVt4bisXQ13rbN0oxhUZR73M6EByXIO+SV5
+                 dKhaX0csgOCTlCxq20yhmUea6H6JIpSE2Rwp"
   podAnnotations: { }
   podSecurityContext: { }
   securityContext: { }  
