--- a/charts/hertzbeat/templates/manager/configmap.yaml
+++ b/charts/hertzbeat/templates/manager/configmap.yaml
@@ -230,7 +230,7 @@ data:
     account:
       - appId: {{ .Values.manager.account.username }}
         credential: {{ .Values.manager.account.password }}
-        role: [admin,user]
+        role: [admin]
       - appId: tom
         credential: hertzbeat
         role: [user]
