--- a/charts/hertzbeat/templates/collector/configmap.yaml
+++ b/charts/hertzbeat/templates/collector/configmap.yaml
@@ -6,7 +6,7 @@ metadata:
     {{- include "hertzbeat.labels" . | nindent 4 }}
 data:
   IDENTITY: ""
-  MANAGER_IP: "{{ include "hertzbeat.manager.host" . }}"
+  MANAGER_HOST: "{{ include "hertzbeat.manager.host" . }}"
   MANAGER_PORT: "1158"
   application.yml: |+
     server:
@@ -21,22 +21,23 @@ data:
       # need to disable spring boot mongodb auto config, or default mongodb connection tried and failed...
       autoconfigure:
         exclude: org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration, org.springframework.boot.autoconfigure.data.mongo.MongoDataAutoConfiguration
-    
+
     ---
     spring:
       config:
         activate:
           on-profile: cluster
-    
+
     collector:
       dispatch:
         entrance:
           netty:
             enabled: true
             identity: ${IDENTITY:}
-            manager-ip: ${MANAGER_IP:127.0.0.1}
+            mode: ${MODE:public}
+            manager-host: ${MANAGER_HOST:127.0.0.1}
             manager-port: ${MANAGER_PORT:1158}
-    
+
     common:
       queue:
         # memory or kafka
