fix : 修复Ingess  中的 tls 不生效

--- a/charts/hertzbeat/templates/manager/ingress.yaml
+++ b/charts/hertzbeat/templates/manager/ingress.yaml
@@ -21,7 +21,7 @@ spec:
                   number: 1157
   tls:
     {{- if .Values.expose.ingress.tls.enabled }}
-    - secretName: {{ .Values.expose.ingress.tls.secretName }}
+    - secretName: {{ .Values.expose.ingress.tls.tls.secretName }}
       hosts:
         - {{ .Values.expose.ingress.host }}
     {{- end }}
