--- a/charts/hertzbeat/values.yaml
+++ b/charts/hertzbeat/values.yaml
@@ -122,5 +122,4 @@ expose:
     annotations: {}    
     tls:
       enabled: false
-      tls:
-        - secretName: your-tls-secret 
+      secretName: your-tls-secret
