--- a/charts/hertzbeat/Chart.yaml
+++ b/charts/hertzbeat/Chart.yaml
@@ -16,7 +16,7 @@
 # under the License.
 
 apiVersion: v2
-name: HertzBeat
+name: hertzbeat
 description: An open-source, real-time monitoring system with custom monitoring, high performance cluster and agentless capabilities.
 type: application
 home: https://hertzbeat.apache.org/
@@ -24,15 +24,15 @@ sources:
   - https://github.com/apache/hertzbeat
   - https://charts.hertzbeat.com
 maintainers:
-  - name: tom
-    email: tomsun28@outlook.com
+  - name: hertzbeat-dev
+    email: dev@hertzbeat.apache.org
 icon: https://raw.githubusercontent.com/apache/hertzbeat/master/home/static/img/hertzbeat-logo.png
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 1.5.0
+version: 1.6.0
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "v1.5.0"
+appVersion: "v1.6.0"
